Fix overflow scrolling on tablist

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -242,21 +242,18 @@ $block-inserter-tabs-height: 44px;
 .block-editor-inserter__patterns-explore-button.components-button {
 	padding: $grid-unit-20;
 	justify-content: center;
-	margin-top: $grid-unit-20;
 	width: 100%;
 }
 
 .block-editor-inserter__block-patterns-tabs-container {
-	height: 100%;
+	padding: $grid-unit-20;
 }
 
 .block-editor-inserter__block-patterns-tablist {
 	display: flex;
 	flex-direction: column;
-	padding: $grid-unit-20;
-	overflow-y: auto;
-	height: 100%;
 	border: none;
+	margin-bottom: $grid-unit-10;
 	// Push the listitem wrapping the "explore" button to the bottom of the panel.
 	div[role="listitem"]:last-child {
 		margin-top: auto;
@@ -264,11 +261,12 @@ $block-inserter-tabs-height: 44px;
 
 	.block-editor-inserter__patterns-tab {
 		// Account for the icon on the right so that it's visually balanced.
-		padding-right: $grid-unit-05;
+		padding: $grid-unit-10 $grid-unit-05 $grid-unit-10 $grid-unit-15;
 		text-align: left;
 		font-weight: inherit;
 		display: block;
 		position: relative;
+		height: auto;
 
 		&[aria-selected="true"] {
 			color: var(--wp-admin-theme-color);
